--- a/.github/workflows/build-windows-executable-app.yaml
+++ b/.github/workflows/build-windows-executable-app.yaml
@@ -415,25 +415,67 @@ jobs:
         
             <!-- Interface options -->
             <UI>
-                  <Publish Dialog="InstallDirDlg" Control="Next" Event="NewDialog" Value="CustomWorkspacesFolderDlg" Order="1" />
-                  <UIRef Id="WixUI_InstallDir" />
-                  <UIRef Id="WixUI_ErrorProgressText" />
+              <TextStyle Id="WixUI_Font_Normal" FaceName="Tahoma" Size="8" />
+              <TextStyle Id="WixUI_Font_Bigger" FaceName="Tahoma" Size="12" />
+              <TextStyle Id="WixUI_Font_Title" FaceName="Tahoma" Size="9" Bold="yes" />
 
+              <Property Id="DefaultUIFont" Value="WixUI_Font_Normal" />
 
-                  <Dialog Id="CustomWorkspacesFolderDlg" Width="370" Height="270" Title="Select Workspaces Folder">
-                    <Control Id="WorkspacesFolderPathLabel" Type="Text" X="15" Y="10" Width="340" Height="30" Text="Select the folder to store workspaces:" />
-                    <Control Id="WorkspacesFolderPathEdit" Type="PathEdit" X="15" Y="50" Width="300" Height="20" Property="WORKSPACE_PATH" />
-                    <Control Id="WorkspacesFolderPathBrowseButton" Type="PushButton" X="320" Y="50" Width="30" Height="20" Text="Browse...">
-                        <Publish Event="SpawnDialog" Value="BrowseDlg" />
-                    </Control>
-                    <Control Id="WorkspacesFolderPathConfirmButton" Type="PushButton" X="200" Y="200" Width="80" Height="30" Default="yes" Text="Next">
-                        <Publish Event="NewDialog" Value="VerifyReadyDlg" />
-                    </Control>
-                    <Control Id="WorkspacesFolderPathCancelButton" Type="PushButton" X="290" Y="200" Width="80" Height="30" Cancel="yes" Text="Cancel">
-                        <Publish Event="EndDialog" Value="Exit" />
-                    </Control>
-                </Dialog>
+              <Dialog Id="CustomWorkspacesFolderDlg" Width="370" Height="270" Title="Select Workspaces Folder">
+                <Control Id="WorkspacesFolderPathLabel" Type="Text" X="15" Y="10" Width="340" Height="30" Text="Select the folder to store workspaces:" />
+                <Control Id="WorkspacesFolderPathEdit" Type="PathEdit" X="15" Y="50" Width="300" Height="20" Property="WORKSPACE_PATH" />
+                <Control Id="WorkspacesFolderPathBrowseButton" Type="PushButton" X="320" Y="50" Width="30" Height="20" Text="Browse...">
+                  <Publish Event="SpawnDialog" Value="BrowseDlg" />
+                </Control>
+                <Control Id="WorkspacesFolderPathConfirmButton" Type="PushButton" X="200" Y="200" Width="80" Height="30" Default="yes" Text="Next">
+                  <Publish Event="NewDialog" Value="VerifyReadyDlg" />
+                </Control>
+                <Control Id="WorkspacesFolderPathCancelButton" Type="PushButton" X="290" Y="200" Width="80" Height="30" Cancel="yes" Text="Cancel">
+                  <Publish Event="EndDialog" Value="Exit" />
+                </Control>
+              </Dialog>
+
+              <DialogRef Id="BrowseDlg" />
+              <DialogRef Id="DiskCostDlg" />
+              <DialogRef Id="ErrorDlg" />
+              <DialogRef Id="FatalError" />
+              <DialogRef Id="FilesInUse" />
+              <DialogRef Id="MsiRMFilesInUse" />
+              <DialogRef Id="PrepareDlg" />
+              <DialogRef Id="ProgressDlg" />
+              <DialogRef Id="ResumeDlg" />
+              <DialogRef Id="UserExit" />
+
+              <Publish Dialog="ExitDialog" Control="Finish" Event="EndDialog" Value="Return" Order="999" />
+
+              <Publish Dialog="WelcomeDlg" Control="Next" Event="NewDialog" Value="LicenseAgreementDlg" Condition="NOT Installed" />
+              <Publish Dialog="WelcomeDlg" Control="Next" Event="NewDialog" Value="VerifyReadyDlg" Condition="Installed AND PATCH" />
+
+              <Publish Dialog="LicenseAgreementDlg" Control="Back" Event="NewDialog" Value="WelcomeDlg" />
+              <Publish Dialog="LicenseAgreementDlg" Control="Next" Event="NewDialog" Value="CustomWorkspacesFolderDlg" Condition="LicenseAccepted = &quot;1&quot;" />
+
+              <Publish Dialog="InstallDirDlg" Control="Back" Event="NewDialog" Value="LicenseAgreementDlg" />
+              <Publish Dialog="InstallDirDlg" Control="Next" Event="SetTargetPath" Value="[WIXUI_INSTALLDIR]" Order="3" />
+              <Publish Dialog="InstallDirDlg" Control="ChangeFolder" Property="_BrowseProperty" Value="[WIXUI_INSTALLDIR]" Order="1" />
+              <Publish Dialog="InstallDirDlg" Control="ChangeFolder" Event="SpawnDialog" Value="BrowseDlg" Order="2" />
+
+              <Publish Dialog="BrowseDlg" Control="OK" Event="SetTargetPath" Value="[_BrowseProperty]" Order="3" />
+              <Publish Dialog="BrowseDlg" Control="OK" Event="EndDialog" Value="Return" Order="4" />
+
+              <Publish Dialog="VerifyReadyDlg" Control="Back" Event="NewDialog" Value="InstallDirDlg" Order="1" Condition="NOT Installed" />
+              <Publish Dialog="VerifyReadyDlg" Control="Back" Event="NewDialog" Value="MaintenanceTypeDlg" Order="2" Condition="Installed AND NOT PATCH" />
+              <Publish Dialog="VerifyReadyDlg" Control="Back" Event="NewDialog" Value="WelcomeDlg" Order="2" Condition="Installed AND PATCH" />
+
+              <Publish Dialog="MaintenanceWelcomeDlg" Control="Next" Event="NewDialog" Value="MaintenanceTypeDlg" />
+
+              <Publish Dialog="MaintenanceTypeDlg" Control="RepairButton" Event="NewDialog" Value="VerifyReadyDlg" />
+              <Publish Dialog="MaintenanceTypeDlg" Control="RemoveButton" Event="NewDialog" Value="VerifyReadyDlg" />
+              <Publish Dialog="MaintenanceTypeDlg" Control="Back" Event="NewDialog" Value="MaintenanceWelcomeDlg" />
+
+              <Property Id="ARPNOMODIFY" Value="1" />
             </UI>
+
+            <UIRef Id="WixUI_Common" />
         
             <!-- Provide license; it should exist in the SourceDir folder -->
             <WixVariable Id="WixUILicenseRtf" Value="SourceDir/openms_license.rtf" />
